# task

backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0cbc261ff4b6_add_brands_table.py  1d4d87a12a06_fix_creation_of_users_table.py  477f80f5024d_add_users_table.py  710799be4664_add_submodels_table.py  82fe994027e8_add_base_specifications_table.py  86e16b832a0a_add_on_delete_for_all_tables.py  ae875ab49192_create_generations_table.py  f898b4ded2fd_create_models_table.py
backend/app/: config.py  db.py  main.py
backend/app/dependancies/: auth.py
backend/app/exceptions/: base_spec_exc.py  brand_exc.py  car_model_exc.py  common.py  generation_exc.py  submodel_exc.py  user_exc.py
backend/app/models/: base_spec.py  brand.py  car_model.py  generation.py  submodel.py  submodels.py  user.py
backend/app/repositories/: base_spec.py  brand.py  car_data.py  car_model.py  generation.py  submodel.py  user.py
backend/app/routers/: auth_router.py  base_spec_router.py  brand_router.py  car_data_router.py  car_model_router.py  generation_router.py  main_router.py  submodel_router.py  user_router.py
backend/app/schemas/: base_spec_schemas.py  brand.py  car_data_schemas.py  car_model_schemas.py  generation_schemas.py  submodel_schemas.py  user_schemas.py
backend/app/services/: auth_service.py  base_spec_service.py  brand_service.py  car_data_service.py  car_model_service.py  generation_service.py  submodel_service.py  user_service.py
backend/app/utils/: enums.py
